; ModuleID = '/home/carl/AnghaBench/linux/drivers/mfd/extr_twl4030-power.c_twl4030_write_script_byte.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/mfd/extr_twl4030-power.c_twl4030_write_script_byte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TWL_MODULE_PM_MASTER = common dso_local global i32 0, align 4
@R_MEMORY_ADDRESS = common dso_local global i32 0, align 4
@R_MEMORY_DATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @twl4030_write_script_byte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @twl4030_write_script_byte(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @TWL_MODULE_PM_MASTER, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @R_MEMORY_ADDRESS, align 4
  %9 = call i32 @twl_i2c_write_u8(i32 %6, i32 %7, i32 %8)
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %5, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %18

13:                                               ; preds = %2
  %14 = load i32, i32* @TWL_MODULE_PM_MASTER, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load i32, i32* @R_MEMORY_DATA, align 4
  %17 = call i32 @twl_i2c_write_u8(i32 %14, i32 %15, i32 %16)
  store i32 %17, i32* %5, align 4
  br label %18

18:                                               ; preds = %13, %12
  %19 = load i32, i32* %5, align 4
  ret i32 %19
}

declare dso_local i32 @twl_i2c_write_u8(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
